# enoki

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 20250130000001_initial_setup.sql  20250130000002_add_password_to_users.sql
backend/src/: auth.rs  db.rs  main.rs  mem_db.rs  middleware.rs  routes.rs  telemetry.rs
backend/src/handlers/: user.rs
backend/src/models/: user.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Login.tsx  Signup.tsx
